tests/snapshots/presenter_pinned__narrow_active.snap
---
source: tests/presenter_pinned.rs
expression: output
---
"┌active.rs─────────────────────────────────────────────────┐"
"│active notice                                             │"
"│Pinned: pinned.rs — widen to view                         │"
"│ACTIVE needle                                             │"
"│active second row                                         │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"└────↑↓ navigate · Enter open · v view · Esc close · ? help┘"
