tests/snapshots/presenter_pinned__origin_cross_worktree.snap
---
source: tests/presenter_pinned.rs
expression: output
---
"┌r─────────────────┐┌active.rs──────────────────────────────────────────────────────┐┌Pinned: [topic @ other[31m]────────────────────────────────────┐"
"│                  ││active notice                                                  ││PINNED                                                         │"
"│                  ││ACTIVE needle                                                  ││                                                               │"
"│                  ││active second row                                              ││                                                               │"
"│                  ││                                                               ││                                                               │"
"│                  ││                                                               ││                                                               │"
"│                  ││                                                               ││                                                               │"
"│                  ││                                                               ││                                                               │"
"│                  ││                                                               ││                                                               │"
"└──────────────────┘└─────────↑↓ navigate · Enter open · v view · Esc close · ? help┘└───────────────────────────────────────────────────────────────┘"
