tests/snapshots/presenter_pinned__origin_named_branch.snap
---
source: tests/presenter_pinned.rs
expression: output
---
"┌r─────────────────┐┌active.rs──────────────────────────────────────────────────────┐┌Pinned: [feat/one]─────────────────────────────────────────────┐"
"│                  ││active notice                                                  ││PINNED                                                         │"
"│                  ││ACTIVE needle                                                  ││                                                               │"
"│                  ││active second row                                              ││                                                               │"
"│                  ││                                                               ││                                                               │"
"│                  ││                                                               ││                                                               │"
"│                  ││                                                               ││                                                               │"
"│                  ││                                                               ││                                                               │"
"│                  ││                                                               ││                                                               │"
"└──────────────────┘└─────────↑↓ navigate · Enter open · v view · Esc close · ? help┘└───────────────────────────────────────────────────────────────┘"
