tests/snapshots/presenter_pinned__tree_hidden_two_preview.snap
---
source: tests/presenter_pinned.rs
expression: output
---
"┌active.rs───────────────────────────────────────┐┌Pinned: [main]──────────────────────────────────┐"
"│active notice                                   ││PINNED                                          │"
"│ACTIVE needle                                   ││                                                │"
"│active second row                               ││                                                │"
"│                                                ││                                                │"
"│                                                ││                                                │"
"│                                                ││                                                │"
"│                                                ││                                                │"
"│                                                ││                                                │"
"│                                                ││                                                │"
"│                                                ││                                                │"
"└────────────↑↓ nav · v view · Esc close · ? help┘└────────────────────────────────────────────────┘"
