tests/snapshots/presenter_pinned__wide_three_region.snap
---
source: tests/presenter_pinned.rs
expression: output
---
"┌r─────────────────┐┌active.rs───────────────────────────────────────────────────────────────────┐┌Pinned: [review]──────────────────────────────────┐"
"│                  ││active notice                                                               ││pinned notice                                     │"
"│                  ││ACTIVE needle                                                               ││PINNED needle                                     │"
"│                  ││active second row                                                           ││pinned second row                                 │"
"│                  ││                                                                            ││                                                  │"
"│                  ││                                                                            ││                                                  │"
"│                  ││                                                                            ││                                                  │"
"│                  ││                                                                            ││                                                  │"
"│                  ││                                                                            ││                                                  │"
"│                  ││                                                                            ││                                                  │"
"│                  ││                                                                            ││                                                  │"
"│                  ││                                                                            ││                                                  │"
"│                  ││                                                                            ││                                                  │"
"│                  ││                                                                            ││                                                  │"
"│                  ││                                                                            ││                                                  │"
"└──────────────────┘└─↑↓ navigate · ←→ tree · Enter open · v view · / search · Esc close · ? help┘└──────────────────────────────────────────────────┘"
